--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,8 @@ name: Deployment
 on:
   push:
     branches:
-      - main
-      - dev
+      - main1
+      - dev1
 jobs:
   test:
     environment: testing
