Added env variables

--- a/.github/workflows/env-secrets-demo.yml
+++ b/.github/workflows/env-secrets-demo.yml
@@ -7,14 +7,14 @@ on:
 
 # 1️⃣ Workflow-level environment variables
 env:
-  APP_NAME: gh-env-demo
-  COMMON_MESSAGE: "Hello from workflow level"
+  APP_NAME: ${{ vars.APP_NAME }}
+  COMMON_MESSAGE: ${{ vars.COMMON_MESSAGE }}
 
 jobs:
   demo-env:
     runs-on: ubuntu-latest
 
-    # 2️⃣ Job-level environment variables
+    # 2️⃣ Job-level environment variablesq
     env:
       JOB_MESSAGE: "Hello from job level"
       NODE_ENV: production
